# Jarvis-Your-AI-Employee

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt
api/: __init__.py  chat.py
config/: settings.py
core/: __init__.py
core/events/: __init__.py  event_bus.py
core/haystack/: __init__.py
core/hermes/: __init__.py  executor.py  router.py  task.py  workflow.py
core/llm/: __init__.py  model_manager.py  ollama_client.py
core/memory/: __init__.py  conversation.py  memory_store.py  vector_memory.py
core/openjarvis/: __init__.py  agent.py
dashboard/: owner_dashboard.html
database/: schema.sql
docs/: ARCHITECTURE.md  HERMES_WORKFLOW.md  INSTALLATION.md  LLM_SETUP.md  OWNER_GUIDE.md
install/: install_linux.sh  install_mac.sh  install_windows.ps1
licensing/: license_check.py
modules/: __init__.py
modules/coffee_shop/: __init__.py
obsidian/vault_template/: README.md
queue/: __init__.py  task_queue.py
telegram/: __init__.py  bot.py  commands.py  handlers.py
tests/: __init__.py  test_memory.py  test_workflow.py
workflows/: __init__.py  coffee_shop.py
