[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-ai-employee"
version = "0.1.0"
description = "Enterprise AI employee platform for business automation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Jarvis Team"}]

[project.urls]
Homepage = "https://github.com/skiinyfellow/Jarvis-Your-AI-Employee"
Repository = "https://github.com/skiinyfellow/Jarvis-Your-AI-Employee.git"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pylint]
max-line-length = 100

[tool.mypy]
python_version = "3.10"
